# mid-cbf-mcs

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .readthedocs.yaml  .release  CHANGELOG.rst  CODEOWNERS  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  code-analysis.sh  configJIVE.py  conftest.py  containers.tmp  docker-compose.yml  generate_containers.py  generate_devices_json.py  hps_master_mcs_tmp.sh  lint_error.txt  mcs-deployment.yaml  mid-cbf-mcs.yml  mid-cbf-mcs.yml.bak  num_capabilities.py  pip.conf  pyproject.toml  requirements.txt  setup-integration-test.cfg  setup-unit-test.cfg  setup.cfg  setup.py  start_prototype.sh  stop_prototype.sh  tango.yml  tangogql.yml  taranta-values.yaml  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json
.make/: .make-release-support  Makefile.mk  docker.mk  k8s.mk  release.mk
charts/cbf-proto/: Chart.yaml  values.yaml
charts/mid-cbf/: Chart.yaml  values.yaml
charts/mid-cbf-tmleafnode/: Chart.yaml  values.yaml
charts/mid-cbf-umbrella/: Chart.yaml  values.yaml
charts/ska-mid-cbf/: Chart.yaml  values.yaml
charts/ska-mid-cbf-boogie/: Chart.yaml
charts/ska-mid-cbf-mcs/: Chart.yaml  fs-slim-values.yaml  hw-values.yaml  values.yaml  vis-slim-values.yaml
charts/ska-mid-cbf-tdc-mcs/: Chart.yaml  fs-slim-values.yaml  hw-values.yaml  values.yaml  vis-slim-values.yaml
charts/ska-mid-cbf-tdc-tmleafnode/: Chart.yaml  values.yaml
charts/ska-mid-cbf-tdc-umbrella/: Chart.yaml  values.yaml
charts/ska-mid-cbf-tmleafnode/: Chart.yaml  values.yaml
charts/ska-mid-cbf-umbrella/: Chart.yaml  taranta-values.yaml  values.yaml
charts/tmleafnode/: Chart.yaml  values.yaml
csplmc/: addDevicesAndProperties.py  configurePollingAndEvents.py  devices.json  generate_devices_json.py  test.py
csplmc/CbfMaster/: conftest.py  setup.py
csplmc/CbfSubarray/: conftest.py  outputlinks.json  setup.cfg
csplmc/CbfTestMaster/: .CbfTestMaster.py.swp  CbfTestMaster.py  CbfTestMaster.xmi
csplmc/CspMaster/: conftest.py  setup.cfg  setup.py
csplmc/Fsp/: conftest.py
csplmc/TmCspSubarrayLeafNodeTest/: TmCspSubarrayLeafNodeTest.py
csplmc/TmTelstateTest/: TmTelstateTest.py
csplmc/Vcc/: conftest.py  setup.cfg  setup.py
csplmc/commons/: global_enum.py
dashboards/: Signal Chain Monitor Dashboard Rev1.wj  mid-cbf-mcs.wj  mid-cbf-overview.wj
docker/: Makefile  generate_containers.py  generate_devices_json.py  mid-cbf-mcs.yml  tango.yml
docker/.make/: Makefile.mk
docs/: DOCS_README.md  Makefile  requirements.txt
docs/src/: CbfController.rst  CbfMaster.rst  CbfSubarray.rst  FSP.rst  PowerSwitch.rst  README.md  TalonLRU.rst  VCC.rst  conf.py  index.rst  system.rst
ext_config/: initial_system_param.json
mnt/: README.md
mnt/alarm_config/: README.md  device_alarm_config.yaml
mnt/fsp_param/: internal_params_fsp_corr_subarray.json  internal_params_fsp_pst_subarray.json
mnt/hw_config/: README.md  hw_config.yaml
mnt/receptor_id_dict/: receptor_id_dict_197r.json  receptor_id_dict_4r.json  receptor_id_dict_8r.json
mnt/slim/: README.md  fs_slim_config.yaml  vis_slim_config.yaml
mnt/talondx-config/: README.md  example-talondx-config.json  hps_master_mcs.sh  talondx-config.json
mnt/vcc_param/: OS_Prototype_FIR_CH20.yml  README.md  VCC_FIR.yml  internal_params_default.json  internal_params_receptor1_band5b.json
notebooks/: example.ipynb  mcs_setup.ipynb
pipconfig/: pip.conf
scripts/: code-analysis.sh  config-tango-dns.sh
src/ska_mid_cbf_mcs/: __init__.py  attribute_proxy.py  dev_factory.py  device_proxy.py  fhs_simulation.py  group_proxy.py  release.py  tm_leaf_node.py  utils.py
src/ska_mid_cbf_tdc_mcs/: release.py
tangods/: addDevicesAndProperties.py  configurePollingAndEvents.py  devices.json
tangods/CbfMaster/: conftest.py  setup.cfg  setup.py
tangods/CbfMaster/CbfMaster/: CbfMaster.py  CbfMaster.xmi  release.py
tangods/CbfMaster/CbfMaster/pogo/: CbfMaster.py  CbfMaster.xmi
tangods/CbfMaster/test/: CbfMaster_test.py
tangods/CbfSubarray/: JIVEconfigscanExample.json  conftest.py  setup.cfg  setup.py
tangods/CbfSubarray/CbfConfigurationPSS/: CbfConfigurationPSS.py  __init__.py  release.py
tangods/CbfSubarray/CbfSubarray/: CbfSubarray.py  CbfSubarray.xmi  CbfSubarray_lmc0.4.1.py  release.py
tangods/CbfSubarray/CbfSubarray/FSTConfigurations/: CbfConfigurationPSS.py  __init__.py  __main__.py
tangods/CbfSubarray/CbfSubarray/pogo/: CbfSubarray.py  CbfSubarray.xmi
tangods/CbfSubarray/CbfSubarrayCorrConfig/: CbfSubarrayCorrConfig.py
tangods/CbfSubarray/CbfSubarrayMulti/: CbfSubarrayMulti.py
tangods/CbfSubarray/CbfSubarrayPssConfig/: CbfSubarrayPssConfig.py
tangods/CbfSubarray/CbfSubarrayPstConfig/: CbfSubarrayPstConfig.py  __init__.py
tangods/CbfSubarray/JIVEconfigscan/: JIVEconfigscanExample.json  generateJIVE.py  scanconfig.json
tangods/CbfSubarray/SearchWindow/: SearchWindow.py
tangods/CbfSubarray/SendConfig/: SendConfig.py  config.json
tangods/CbfSubarray/test/: CbfSubarray_test.py  jones_matrix_gen.py
tangods/CbfSubarray/test/test_json/: ConfigureScan_basic.json  ConfigureScan_basic_common_cbf.json  ConfigureScan_basic_common_cbf_v2.json  Configure_TM-CSP_v2.json  Scan1_basic.json  Scan2_basic.json  data_model_confluence.json  delaymodel.json  delaymodel_fsp.json  jonesmatrix.json  jonesmatrix_fsp.json  test_ConfigureScan_4Corr.json  test_ConfigureScan_band1complete.json  test_ConfigureScan_basic.json  test_ConfigureScan_onlyCorr_basic.json  test_ConfigureScan_onlyPss_basic.json  test_ConfigureScan_onlyPst_basic.json  timingbeamweights.json
tangods/DeviceFactory/: DeviceFactory.py
tangods/Fsp/: conftest.py  setup.cfg  setup.py
tangods/TmCspSubarrayLeafNodeTest/: TmCspSubarrayLeafNodeTest.py
tangods/Vcc/: conftest.py  setup.py
tangods/commons/: global_enum.py
tangods/data/: midcbf_dsconfig.json
test-harness/: Makefile
tests/: conftest.py  pytest.ini  test_utils.py  testbeds.yaml
tests/data/: ConfigureScan_19_0_CORR.json  ConfigureScan_1_0_CORR.json  ConfigureScan_4_0_CORR.json  ConfigureScan_4_1_CORR.json  ConfigureScan_4_PR_PST.json  README.txt  (+65 more)
(+613 files in other folders)
