[tool.poetry]
name = "ska-mid-cbf-mcs"
version = "0.1.0"
description = ""
authors = ["Mariana Paulo <mariana.paulo@criticalsoftware.com>"]
readme = "README.md"
packages = [{include = "ska_mid_cbf_mcs"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
backoff = "^2.2.1"
typing-extensions = "^4.8.0"
numpy = "^1.26.0"
jsonschema = "3.2.0"
pytango = "9.4.2"
pytest-pydocstyle = "2.2.0"
pytest-pycodestyle = "2.2.0"
pytest = "6.2.5"
pytest-bdd = "^6.1.1"
pytest-cov = "^4.1.0"
pytest-forked = "^1.6.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.11.1"
pytest-xdist = "^3.3.1"
pytest-repeat = "^0.9.1"
pytest-pylint = "^0.19.0"
pyyaml = "^6.0.1"
scp = "^0.14.5"
paramiko = "^3.3.1"
pylint = "2.15.5"
influxdb-client = "^1.37.0"
multidict = "^6.0.4"
yarl = "^1.9.2"
aiohttp = "^3.8.5"
aiocsv = "^1.2.4"
requests = "2.26.0"
ska-tango-base = "0.11.4"
ska-ser-logging = "^0.4.1+0a677a67"
ska-ser-log-transactions = "^0.2.2+ae0f5c92"
ska-telmodel = "^1.8.1"


[[tool.poetry.source]]
name = "ska-nexus"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
