[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = mid-cbf-mcs

[tool:pytest]
log_cli = True
log_cli_level = INFO
log_file = pytest-logs.txt
log_file_level = INFO
testpaths = tests
addopts = --cov=mid-cbf-mcs 
          --json-report 
          --json-report-file=htmlcov/report.json 
          --cov-report term 
          --cov-report html 
          --cov-report xml 
          --junitxml=build/reports/mid-cbf-unit-tests.xml
          --pylint --pylint-error-types=EF

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
