[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = mid-cbf-mcs

[tool:pytest]
log_cli = True
log_cli_level = INFO
log_file = pytest-logs.txt
log_file_level = INFO

# add test file paths to testpaths and addopts coverage tag
testpaths = tangods/CbfMaster/test
            tangods/CbfSubarray/test
            
#tangods/Vcc/test

addopts = --cov=tangods/CbfMaster
          --cov=tangods/CbfSubarray
          --json-report 
          --json-report-file=htmlcov/report.json 
          --cov-report term 
          --cov-report html 
          --cov-report xml 
          --junitxml=build/reports/unit-tests.xml
          --pylint --pylint-error-types=EF
          --verbose

# addopts = --cov=tangods/CbfMaster
#           --cov=tangods/CbfSubarray
#           --cov=tangods/Vcc
#           --no-cov
#           --pylint --pylint-error-types=EF
#           -k 'CbfSubarray and test_EndScan'

# -k 'CbfSubarray and test_ConfigureScan_basic'
# -k 'CbfSubarray and test_EndScan'
# -k test_ConfigureScan_basic
          
#-k test_SetFrequencyBand

# NOTE: Optionally add a pytest command line argumet to 
#       addopts, in order to restrict the tests to be
#       executed, for ex.:
# -k 'CbfSubarray and AddRemoveReceptors_valid'
# -k 'CbfMaster and test_On_valid'

filterwarnings =
    ignore::DeprecationWarning

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
