[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = ska-mid-cbf-mcs

[tool:pytest]
log_cli = True
log_cli_level = INFO
log_file = pytest-logs.txt
log_file_level = INFO

# add test file paths to testpaths and addopts coverage tag
testpaths = tests/integration
            # tests/unit

addopts = --cov=src/ska_mid_cbf_mcs/controller
          --cov=src/ska_mid_cbf_mcs/subarray
          --json-report 
          --json-report-file=htmlcov/report.json 
          --cov-report term 
          --cov-report html 
          --cov-report xml 
          --junitxml=build/reports/unit-tests.xml
          --pylint --pylint-error-types=EF
          --verbose
          -k test_On_valid

# NOTE: Optionally add a pytest command line argument to 
#       addopts, in order to restrict the tests to be
#       executed, for ex.:
# -k test_ConfigureScan_basic
# -k 'CbfSubarray and AddRemoveReceptors_valid'
# -k 'CbfController or test_On_valid'

filterwarnings =
    ignore::DeprecationWarning

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
