[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = CbfMaster

[tool:pytest]
testpaths = test
addopts = --cov=CbfMaster 
          --json-report 
          --json-report-file=htmlcov/report.json 
          --cov-report term 
          --cov-report html 
          --cov-report xml -v
          --junitxml=build/reports/cbf-master-unit-tests.xml
filterwarnings =
    ignore::DeprecationWarning

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
builder = html
