[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = CbfSubarray

[tool:pytest]
log_cli = True
log_cli_level = DEBUG
log_file = pytest-logs.txt
log_file_level = INFO
testpaths = test
addopts = --cov=CbfSubarray
          --json-report 
          --json-report-file=htmlcov/report.json 
          --cov-report term 
          --cov-report html 
          --cov-report xml 
          --junitxml=build/reports/cbf-subarray-unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
builder = html
